--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://127.0.0.1:4000",
+  "proxy": "https://amazon-backend-bharat-clone.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
